# tugas7-C-smt2

./: CMakeLists.txt  main.c  soal1.c  soal1.h  soal2.c  soal3.c  soal4.c  soal5.c  soal5.h  soal6.c  soal6.h
