cmake_minimum_required(VERSION 3.28)
project(tugas7_c C)

set(CMAKE_C_STANDARD 17)

add_executable(tugas7_c main.c
        soal1.c
        soal1.h
        soal2.c
        soal2.h
        soal3.c
        soal3.h
        soal4.c
        soal4.h
        soal5.c
        soal5.h
        soal6.c
        soal6.h)
